parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALLOC
    APP
    ARRAY
    ARROW
    ASSIGN
    BOOL
    CALL
    COND
    EQUAL
    F
    FALSE
    FUN
    FUNPTR
    GET
    I32
    ID
    LAM
    LCOMMENT
    LET
    LT
    RCOMMENT
    SEP
    SEQ
    SET
    TRUE
    TT
    UNIT
    VAR
    WHITESPACE

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     term -> term TIMES factor
Rule 4     term -> term DIVIDE factor
Rule 5     expression -> term
Rule 6     term -> factor
Rule 7     factor -> NUMBER
Rule 8     factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

ALLOC                : 
APP                  : 
ARRAY                : 
ARROW                : 
ASSIGN               : 
BOOL                 : 
CALL                 : 
COND                 : 
DIVIDE               : 4
EQUAL                : 
F                    : 
FALSE                : 
FUN                  : 
FUNPTR               : 
GET                  : 
I32                  : 
ID                   : 
LAM                  : 
LCOMMENT             : 
LET                  : 
LPAREN               : 8
LT                   : 
MINUS                : 2
NUMBER               : 7
PLUS                 : 1
RCOMMENT             : 
RPAREN               : 8
SEP                  : 
SEQ                  : 
SET                  : 
TIMES                : 3
TRUE                 : 
TT                   : 
UNIT                 : 
VAR                  : 
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 8 0
factor               : 3 4 6
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (5) expression -> . term
    (3) term -> . term TIMES factor
    (4) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    expression                     shift and go to state 1
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PLUS            shift and go to state 6
    MINUS           shift and go to state 7


state 2

    (5) expression -> term .
    (3) term -> term . TIMES factor
    (4) term -> term . DIVIDE factor

    PLUS            reduce using rule 5 (expression -> term .)
    MINUS           reduce using rule 5 (expression -> term .)
    $end            reduce using rule 5 (expression -> term .)
    RPAREN          reduce using rule 5 (expression -> term .)
    TIMES           shift and go to state 8
    DIVIDE          shift and go to state 9


state 3

    (6) term -> factor .

    TIMES           reduce using rule 6 (term -> factor .)
    DIVIDE          reduce using rule 6 (term -> factor .)
    PLUS            reduce using rule 6 (term -> factor .)
    MINUS           reduce using rule 6 (term -> factor .)
    $end            reduce using rule 6 (term -> factor .)
    RPAREN          reduce using rule 6 (term -> factor .)


state 4

    (7) factor -> NUMBER .

    TIMES           reduce using rule 7 (factor -> NUMBER .)
    DIVIDE          reduce using rule 7 (factor -> NUMBER .)
    PLUS            reduce using rule 7 (factor -> NUMBER .)
    MINUS           reduce using rule 7 (factor -> NUMBER .)
    $end            reduce using rule 7 (factor -> NUMBER .)
    RPAREN          reduce using rule 7 (factor -> NUMBER .)


state 5

    (8) factor -> LPAREN . expression RPAREN
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (5) expression -> . term
    (3) term -> . term TIMES factor
    (4) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    expression                     shift and go to state 10
    term                           shift and go to state 2
    factor                         shift and go to state 3

state 6

    (1) expression -> expression PLUS . term
    (3) term -> . term TIMES factor
    (4) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    term                           shift and go to state 11
    factor                         shift and go to state 3

state 7

    (2) expression -> expression MINUS . term
    (3) term -> . term TIMES factor
    (4) term -> . term DIVIDE factor
    (6) term -> . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    term                           shift and go to state 12
    factor                         shift and go to state 3

state 8

    (3) term -> term TIMES . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    factor                         shift and go to state 13

state 9

    (4) term -> term DIVIDE . factor
    (7) factor -> . NUMBER
    (8) factor -> . LPAREN expression RPAREN

    NUMBER          shift and go to state 4
    LPAREN          shift and go to state 5

    factor                         shift and go to state 14

state 10

    (8) factor -> LPAREN expression . RPAREN
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    RPAREN          shift and go to state 15
    PLUS            shift and go to state 6
    MINUS           shift and go to state 7


state 11

    (1) expression -> expression PLUS term .
    (3) term -> term . TIMES factor
    (4) term -> term . DIVIDE factor

    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    MINUS           reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 1 (expression -> expression PLUS term .)
    TIMES           shift and go to state 8
    DIVIDE          shift and go to state 9


state 12

    (2) expression -> expression MINUS term .
    (3) term -> term . TIMES factor
    (4) term -> term . DIVIDE factor

    PLUS            reduce using rule 2 (expression -> expression MINUS term .)
    MINUS           reduce using rule 2 (expression -> expression MINUS term .)
    $end            reduce using rule 2 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 2 (expression -> expression MINUS term .)
    TIMES           shift and go to state 8
    DIVIDE          shift and go to state 9


state 13

    (3) term -> term TIMES factor .

    TIMES           reduce using rule 3 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 3 (term -> term TIMES factor .)
    PLUS            reduce using rule 3 (term -> term TIMES factor .)
    MINUS           reduce using rule 3 (term -> term TIMES factor .)
    $end            reduce using rule 3 (term -> term TIMES factor .)
    RPAREN          reduce using rule 3 (term -> term TIMES factor .)


state 14

    (4) term -> term DIVIDE factor .

    TIMES           reduce using rule 4 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 4 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 4 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 4 (term -> term DIVIDE factor .)
    $end            reduce using rule 4 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 4 (term -> term DIVIDE factor .)


state 15

    (8) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    $end            reduce using rule 8 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 8 (factor -> LPAREN expression RPAREN .)

